--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nivo/line": "^0.87.0",
     "d3": "^7.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
